Added security hint + execute permission

--- a/app/views/database/security/roles.html
+++ b/app/views/database/security/roles.html
@@ -89,6 +89,7 @@
             <thead>
             <tr>
               <th>Name</th>
+              <th>Execute</th>
               <th>Delete</th>
               <th>Update</th>
               <th>Read</th>
