--- a/app/views/server/stats/auditing/log.html
+++ b/app/views/server/stats/auditing/log.html
@@ -3,7 +3,19 @@
     <div class="col-md-12 ">
       <div class="panel panel-default">
 
-        <div class="panel-heading">Auditing Filters</div>
+        <div class="panel-heading">
+          <b> Auditing Filters
+            <a href="{{ auditingWiki }}" class="btn btn-trasparent btn-help"
+               data-placement="right"
+               target="_blank"
+               data-title="Help"
+               data-trigger="hover"
+               data-animation="am-flip-x"
+               bs-tooltip>
+              <i class="fa fa-question-circle fa-lg"></i>
+            </a>
+          </b>
+        </div>
 
 
         <div class="panel-body">
@@ -36,7 +48,7 @@
                 <div class="col-md-3">
                   <label>Database </label>
                   <select id="databasesOnline" ng-model="query.db" class="form-control"
-                          ng-options="db for db in server.databases"
+                          ng-options="db for db in databases"
                           data-placeholder="Pick a Database">
                   </select>
                 </div>
