--- a/app/views/database/query.html
+++ b/app/views/database/query.html
@@ -172,7 +172,7 @@
   <div class="query-info">
     <div class="row vertical-align">
       <div class="col-md-9">
-        {{item.notification}}. Limit: {{limit}} <a class="btn btn-trasparent btn-sm queryConfigStyle"
+        {{item.notification}}. Limit: {{item.limit}} <a class="btn btn-trasparent btn-sm queryConfigStyle"
                                                    href="javascript:void(0)" ng-click="changeLimit()"
                                                    onclick="document.getElementById('configQueryButton').click()">
         (change it)</a>
