Added some missing labels

--- a/app/views/server/stats/security/serverSecurity.html
+++ b/app/views/server/stats/security/serverSecurity.html
@@ -68,7 +68,7 @@
                 <a href="javascript:void(0)" tabindex="1"
                    data-trigger="focus" data-placement="right"
                    data-container="body"
-                   data-content="{{ 'ssec.passwordValidator.enable' | translate:links }}" bs-popover>
+                   data-content="{{ 'sec.passwordValidator.enabled' | translate:links }}" bs-popover>
                   <i class="fa fa-question-circle"></i>
                 </a>
               </label>
