--- a/app/views/database/config/structure.html
+++ b/app/views/database/config/structure.html
@@ -1,47 +1,46 @@
 <div ng-controller="StructureController" class="col-md-12">
-    <div class="row">
-        <p>
-            <b><a
-                    href="http://www.orientdb.com/docs/{{version}}/orientdb.wiki/Clusters.html" target="_blank">Clusters</a>
-            </b> are sets of records grouped by a mean. Any mean you want to
-            assign. You can use a Cluster like a Table of the Relational DBMS
-            world, namely to group records of the same type. Or you could
-            want to group records by different logics. <br/> There
-            are two kinds of clusters: <b>Physical</b> and <b>In-memory</b>.The first one is persistent, the second one
-            is volatile.
-        </p>
-    </div>
-    <div class="row">
-        <table class="table table-striped table-bordered table-hover table-condensed">
-            <thead>
-            <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Records</th>
-                <th>Conflict Strategy
-                    <a href="javascript:void(0)" tabindex="1"
-                       data-trigger="focus" data-placement="bottom"
-                       data-container="body"
-                       data-content="{{ 'structure.conflictStrategy' | translate:links }}" bs-popover>
-                        <i class="fa fa-question-circle"></i>
-                    </a>
-                </th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="cluster in clusters | orderBy:'name'">
-                <td>{{ cluster.id }}</td>
-                <td>{{ cluster.name }}</td>
-                <td>{{ cluster.records }}</td>
-                <td>
-                    <select type="text" ng-options="opt for opt in conflictStrategies"
-                            ng-change="changeStrategy(cluster)" ng-model="cluster.conflictStrategy">
+  <div class="row">
+    <p>
+      <b>Clusters
+      </b> are sets of records grouped by a mean. Any mean you want to
+      assign. You can use a Cluster like a Table of the Relational DBMS
+      world, namely to group records of the same type. Or you could
+      want to group records by different logics. <br/> There
+      are two kinds of clusters: <b>Physical</b> and <b>In-memory</b>.The first one is persistent, the second one
+      is volatile.
+    </p>
+  </div>
+  <div class="row">
+    <table class="table table-striped table-bordered table-hover table-condensed">
+      <thead>
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Records</th>
+        <th>Conflict Strategy
+          <a href="javascript:void(0)" tabindex="1"
+             data-trigger="focus" data-placement="bottom"
+             data-container="body"
+             data-content="{{ 'structure.conflictStrategy' | translate:links }}" bs-popover>
+            <i class="fa fa-question-circle"></i>
+          </a>
+        </th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr ng-repeat="cluster in clusters | orderBy:'name'">
+        <td>{{ cluster.id }}</td>
+        <td>{{ cluster.name }}</td>
+        <td>{{ cluster.records }}</td>
+        <td>
+          <select type="text" ng-options="opt for opt in conflictStrategies"
+                  ng-change="changeStrategy(cluster)" ng-model="cluster.conflictStrategy">
 
-                    </select>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+          </select>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 
